<resources>
    <string name="app_name">SlimNoteK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="item_title">标题</string>
    <string name="item_date">日期</string>
    <string name="item_abstract">摘要</string>
    <string name="item_content">内容</string>
    <string name="item_empty">无</string>
    <string name="label_notes_all">所有笔记</string>
    <string name="label_add">添加笔记</string>
    <string name="item_delete">删除</string>
    <string name="item_edit">编辑</string>
    <string name="appwidget_text">添加笔记</string>
    <string name="add_widget">组件</string>
    <string name="item_author">作者</string>

    <string name="exit_hint">再次点击将退出应用</string>
</resources>
